// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders a specific icon 1`] = `
<svg
  fill="none"
  height="16"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
  />
  <path
    d="M12 9v4"
  />
  <path
    d="M12 17h.01"
  />
</svg>
`;

exports[`Icon renders an icon with custom props 1`] = `
<svg
  class="custom-icon"
  fill="none"
  height="24"
  stroke="red"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20 6 9 17l-5-5"
  />
</svg>
`;

exports[`Icon renders an icon with default props 1`] = `
<svg
  fill="none"
  height="16"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20 6 9 17l-5-5"
  />
</svg>
`;
